# ai-shell

./: .cursorignore  .cursorrules  .gitignore  README.md  config.yaml  pyproject.toml
ai_shell/: ai_shell.py  cli.py  command.py  config.py  conflict_resolver.py  context.py  context_manager.py  datatypes.py  dependency_handler.py  error_manager.py  models.py  ui_handler.py  workflow_manager.py
ai_shell/command/: __init__.py  command_cache_manager.py  command_executor.py  command_generator.py  command_history_manager.py  command_processor.py  context_builder.py  user_preferences_manager.py  workflow_manager.py
ai_shell/handlers/: dependency_handler.py
ai_shell/llm/: __init__.py  command_generator.py  openrouter_ai.py  prompts.py
ai_shell/utils/: ai_history.py  cache.py  command_executor.py  conflict_resolver.py  console.py  dependency_manager.py  error_analyzer.py  error_handler.py  error_manager.py  logger.py  os_api.py  system_utils.py
assets/prompts/: command_generation.md  conflict_resolution.md  error_analysis.md  error_resolution.md  system_info_analysis.md
docs/: context.md  multi-role-prompt.md  tests.md
tests/: conftest.py  test_ai_shell.py  test_cache.py  test_command_generator.py  test_conflict_resolver.py
